# Penguin

./: Cargo.toml  README.md  dhat-heap.json  test.pn
benches/: benchmark.rs
examples/: even.pn  prime.pn  sum.pn
examples/python/: prime.py  sum.py
src/: lib.rs  main.rs
src/environment/: environment.rs
src/parser/: ast.rs  grammar.pest  mod.rs  parser.rs
src/parser/node/: chess_notation.rs  conditional.rs  declaration.rs  expression.rs  function.rs  io.rs  looping.rs  mod.rs  primitive.rs  scope.rs
tests/: conditional.rs  function.rs  loop.rs  scope.rs
tests/common/: mod.rs
