[package]
name = "penguin"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1

[features]
dhat-heap = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
gag = "1.0.0"

[dependencies]
dhat = "0.3.3"
pest = "2.7.11"
pest_derive = "2.7.11"
anyhow = "1.0.86"
fxhash = "0.2.1"
clap={ version = "4.5.9", features = ["derive"] }